config orderBy for users, categories and products on l5-repository
