# ecommerce/app/Http/Controllers/Api/v1/UserController.php
@@ -39,6 +39,20 @@ class UserController extends Controller
      *          @OA\Schema(type="string"),
      *          style="form"
      *      ),
+     *      @OA\Parameter(
+     *          name="orderBy",
+     *          in="query",
+     *          description="order results by",
+     *          @OA\Schema(type="string"),
+     *          style="form"
+     *      ),
+     *      @OA\Parameter(
+     *          name="sortedBy",
+     *          in="query",
+     *          description="use ASC or DESC",
+     *          @OA\Schema(type="string"),
+     *          style="form"
+     *      ),
      *      @OA\Response(
      *          response="200", description="List of users"
      *      )
